syntax = "proto3";

package cop;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "tco_tmiv.proto";

service Cop {
  rpc OpenStatusStream(StatusStreamRequest) returns (stream StatusStreamResponse);
  rpc GetTaskStatus(GetTaskStatusRequest) returns (GetTaskStatusResponse);
  rpc GetWorkerStatus(GetWorkerStatusRequest) returns (GetWorkerStatusResponse);
  rpc GetAllStatus(GetAllStatusRequest) returns (GetAllStatusResponse);
  rpc PostCommand(PostCommandRequest) returns (PostCommandResponse);
}

message StatusStreamRequest {
}

message StatusStreamResponse {
  CopStatus cop_status = 1;
}

message GetTaskStatusRequest {
  google.protobuf.UInt32Value task_id = 1;
}

message GetTaskStatusResponse {
  CopTaskStatus task_status = 1;
}

message GetWorkerStatusRequest {
}

message GetWorkerStatusResponse {
  WorkerStatusSet worker_status = 1;
}

message CopStatus {
  oneof inner {
    CopTaskStatus task_status = 1;
    WorkerState worker_state = 2;
    TaskQueueStatusSet task_queue_status = 3;
  }
}

message GetAllStatusRequest {
}

message GetAllStatusResponse {
  repeated CopTaskStatus task_statuses = 1;
  WorkerStatusSet worker_status = 2;
}

message PostCommandRequest {
  CopCommand command = 1;
}

message PostCommandResponse {
}

message CopTaskStatus {
  uint32 task_id = 1;
  tco_tmiv.Tco tco = 2;
  CopTaskStatusPattern status = 3;
  google.protobuf.Timestamp timestamp = 4;
}

enum CopTaskStatusPattern {
  PENDING = 0;
  EXECUTED = 1;
  ACCEPTED = 2;
  REJECTED = 3;
  CANCELED = 4;
  TIMEOUT = 5;
  LOCKOUT = 6;
  FAILED = 7;
}

message WorkerStatusSet {
  WorkerState worker_state = 2;
  TaskQueueStatusSet task_queue_status = 3;
}

message WorkerState {
  WorkerStatePattern state = 1;
  google.protobuf.Timestamp timestamp = 2;
}

enum WorkerStatePattern {
  WORKER_CLCW_UNRECEIVED = 0;
  WORKER_IDLE = 1;
  WORKER_INITIALIZE = 2;
  WORKER_ACTIVE = 3;
  WORKER_LOCKOUT = 4;
  WORKER_UNLOCKING = 5;
  WORKER_TIMEOUT = 6;
  WORKER_FAILED = 7;
  WORKER_CANCELED = 8;
}

message TaskQueueStatusSet {
  TaskQueueStatus pending = 1;
  TaskQueueStatus executed = 2;
  TaskQueueStatus rejected = 3;
  google.protobuf.UInt32Value front_vs = 4;
  google.protobuf.Timestamp oldest_time = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message TaskQueueStatus {
  google.protobuf.UInt32Value front_id = 1;
  google.protobuf.StringValue front_tco_name = 2;
  uint32 command_number = 3;
}

message CopCommand {
  oneof command {
    InitializeCommand initialize = 1;
    TerminateCommand terminate = 2;
    UnlockCommand unlock = 3;
    SetTimeoutCommand set_timeout = 4;
  }
}

message InitializeCommand {
  uint32 vsvr = 1;
}

message TerminateCommand {
}

message UnlockCommand {
}

message SetTimeoutCommand {
  uint32 timeout_sec = 1;
}


